Update home page layout and about page layer as requested by code reviewer

--- a/about.html
+++ b/about.html
@@ -26,9 +26,9 @@
   </head>
   <body>
     <!--Header Section (Toolbar)-->
-    <header class="header">
+    <header class="header container-fluid social-links">
       <div
-        class="social-links container-fluid d-none d-md-flex flex-md-row justify-content-md-end gap-3 p-md-1"
+        class="container d-none d-md-flex flex-md-row justify-content-md-end gap-3 p-md-1"
       >
         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
         <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -37,12 +37,10 @@
         <a href="#" class="logout me-2">logout</a>
       </div>
     </header>
-
-    <!--New Navew-->
-    <nav class="navbar navbar-expand-md bg-light container-fluid">
+    <nav class="navbar navbar-expand-md container">
       <div class="container-fluid">
         <button
-          class="navbar-toggler position-relative"
+          class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent"
@@ -57,25 +55,29 @@
             id="close"
           ></span>
         </button>
-
         <a class="navbar-brand ms-lg-5" href="index.html"
           ><img src="images/Ccsummit2015_logo.png" alt="logo" class="logo"
         /></a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul
-            class="navbar-nav mb-2 mb-lg-0 w-100 justify-content-center align-items-center"
+            class="navbar-nav gap-3 mb-2 mb-lg-0 w-100 justify-content-between align-items-center"
           >
             <li class="nav-item ms-md-auto">
-              <a class="nav-link active" aria-current="page" href="#">About</a>
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Program</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">Join</a>
+              <a class="nav-link" href="#prog">Program</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sponsor</a>
+              <a class="nav-link" href="#join">Join</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#partners">Sponsor</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">News</a>
@@ -90,20 +92,20 @@
     </nav>
     <main class="main-content">
       <section
-        class="intro container-fluid d-flex flex-column gap-4 p-md-5 p-2 p-lg-5 justify-content-center align-items-center"
+        class="introduce_main container-fluid"
       >
+      <div class="container d-flex flex-column gap-4 p-md-5 p-2 p-lg-5 justify-content-center align-items-center">
         <div
           class="container-fluid d-md-flex flex-md-column align-items-center gap-3"
         >
-          <h1 class="greetings">The Web Developer Bootcamp 2022</h1>
           <img
-            src="images/Blog-2-2.png"
+            src="images/about_title.png"
             class="w-100 d-md-none"
             alt="Bootcamp banner"
           />
           <img
-            src="images/Blog-2-2.png"
-            class="w-75 d-none d-md-block"
+            src="images/about_title.png"
+            class="w-50 d-none d-md-block"
             alt="Bootcamp banner"
           />
           <span class="line"></span>
@@ -125,10 +127,11 @@
           </p>
           <h3>WebDevBootCamp2022@Douala</h3>
         </div>
+        </div>
       </section>
 
       <section
-        class="my-logo-section container-fluid d-flex flex-column gap-4 p-md-5 p-2 p-lg-5 justify-content-center align-items-center"
+        class="my-logo-section container d-flex flex-column gap-4 p-md-5 p-2 p-lg-5 justify-content-center align-items-center"
       >
         <div class="title d-md-flex flex-md-column align-items-center gap-3">
           <h3 class="text-center">
@@ -152,7 +155,7 @@
       </section>
 
       <section
-        class="CC-past-events container-fluid d-flex flex-column gap-4 p-md-5 p-2 p-lg-5 justify-content-center align-items-center"
+        class="CC-past-events container d-flex flex-column gap-4 p-md-5 p-2 p-lg-5 justify-content-center align-items-center"
       >
         <div
           class="title d-md-flex flex-column gap-2 justify-content-center align-items-center"
@@ -183,21 +186,62 @@
       </section>
 
       <!--Footer-->
-      <div
-        class="container-fluid bg-dark d-flex gap-4 flex-row justify-content-center p-2"
-      >
-        <a
-          href="index.html"
-          class="logo-link d-flex justify-content-end align-items-center"
-          ><img src="images/Ccsummit2015_logo.png" alt="logo" class="logo"
-        /></a>
-        <div class="w-50">
-          <h4>2022 Web development BootCamp, Some right reserved</h4>
-          <p >
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. A harum
-            quos voluptas sit iusto eum nostrum doloribus non, numquam
-            voluptatum?
-          </p>
+      <footer
+          class="bgdark text-center container-fluid prog-wrapp d-flex flex-column flex-md-column flex-lg-column justify-content-center p-md-5 p-2 p-lg-5 my-4"
+        >
+          <div
+            class="partners heading container-fluid d-flex justify-content-center flex-column align-items-center my-4"
+          id="partners">
+            <h3 class="heading-secondary container-fluid text-center my4">
+              Partners
+            </h3>
+            <span class="line"></span>
+          </div>
+
+          <div>
+            <img
+              class="partner-logo"
+              src="images/mozilla-1-logo-black-and-white.png"
+              alt="Mozilla logo"
+            />
+            <img
+              class="partner-logo"
+              src="images/1024px-Google_2015_logo_colorless_mourning_period.svg.png"
+              alt="Google logo"
+            />
+            <img
+              class="partner-logo"
+              src="images/naver-logo-black-and-white.png"
+              alt="Naver logo"
+            />
+            <img
+              class="partner-logo"
+              src="images/1333877_airbnb-logo-angies-list-logo-white-png-download.png"
+              alt="airbnb logo"
+            />
+            <img
+              class="partner-logo"
+              src="images/naver-logo-black-and-white.png"
+              alt="Naver logo"
+            />
+          </div>
+        </footer>
+        <div
+          class="container d-flex gap-4 flex-row justify-content-center p-2"
+        >
+          <a
+            href="index.html"
+            class="logo-link d-flex justify-content-end align-items-center"
+            ><img src="images/Ccsummit2015_logo.png" alt="logo" class="logo"
+          /></a>
+          <div class="w-50">
+            <h4>2022 Web development BootCamp, Some right reserved</h4>
+            <p >
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. A harum
+              quos voluptas sit iusto eum nostrum doloribus non, numquam
+              voluptatum?
+            </p>
+          </div>
         </div>
       </div>
     </main>
