Update home page layout and about page layer as requested by code reviewer

--- a/index.html
+++ b/index.html
@@ -97,16 +97,8 @@
       >
       <div class="container d-flex flex-column gap-4 p-md-5 p-2 p-lg-5">
         <div>
-          <img
-            src="images/title.png"
-            class="w-50 d-none d-md-block"
-            alt="Bootcamp banner"
-          />
-          <img
-            src="images/title.png"
-            class="w-100 d-block d-md-none"
-            alt="Bootcamp banner"
-          />
+          <h3 class="heading-small">"Hello, Sharing World"</h3>
+          <h1 class="heading-big">CREATIVE COMMONS <br>GLOBAL SUMMIT<br> 2015</h1>
         </div>
         <p class="intro-text">
           Welcome to our 2022 web development Boot camp. The only course you
