--- a/about.html
+++ b/about.html
@@ -98,17 +98,8 @@
         <div
           class="container-fluid d-md-flex flex-md-column align-items-center gap-3"
         >
-          <img
-            src="images/about_title.png"
-            class="w-100 d-md-none"
-            alt="Bootcamp banner"
-          />
-          <img
-            src="images/about_title.png"
-            class="w-50 d-none d-md-block"
-            alt="Bootcamp banner"
-          />
-          <span class="line"></span>
+         <h1 class="heading-about text-center">CREATIVE COMMONS<br> GLOBAL SUMMIT 2015</h1>
+         <span class="line"></span>
         </div>
         <p class="intro-text about-intro-text text-center">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Lorem ipsum
